--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,13 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
-	compile('org.springframework.boot:spring-boot-starter-security')
+//	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
+	compile 'commons-io:commons-io:2.6'
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.security:spring-security-test')
+//	testCompile('org.springframework.security:spring-security-test')
+	testCompile 'info.cukes:cucumber-spring:1.2.4'
+	testCompile 'info.cukes:cucumber-junit:1.2.4'
 }
