--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,12 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 //	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('com.h2database:h2')
-	compile 'commons-io:commons-io:2.6'
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.flywaydb:flyway-core:5.0.7')
+    compile('commons-dbcp:commons-dbcp:1.4')
+	compile('org.hsqldb:hsqldb:2.4.0')
+	compile("org.hibernate:hibernate-java8")
+	compile('commons-io:commons-io:2.6')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 //	testCompile('org.springframework.security:spring-security-test')
