--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,18 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
-	}
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.13"
 	}
+}
+
+plugins {
+    id 'org.inferred.processors' version '1.2.11'
 }
 
 apply plugin: 'java'
@@ -28,14 +36,19 @@ dependencies {
 //	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.flywaydb:flyway-core:5.0.7')
+    compile('org.flywaydb:flyway-core:5.0.7')
     compile('commons-dbcp:commons-dbcp:1.4')
 	compile('org.hsqldb:hsqldb:2.4.0')
-	compile("org.hibernate:hibernate-java8")
+	compile('org.hibernate:hibernate-java8')
 	compile('commons-io:commons-io:2.6')
-	compileOnly('org.projectlombok:lombok')
+    
+    compile('org.mapstruct:mapstruct-jdk8:1.2.0.Final')
+    processor('org.mapstruct:mapstruct-processor:1.2.0.Final')
+	processor('org.projectlombok:lombok')
+	compile('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 //	testCompile('org.springframework.security:spring-security-test')
-	testCompile 'info.cukes:cucumber-spring:1.2.4'
-	testCompile 'info.cukes:cucumber-junit:1.2.4'
+	testCompile('info.cukes:cucumber-java:1.2.4')
+	testCompile('info.cukes:cucumber-spring:1.2.4')
+	testCompile('info.cukes:cucumber-junit:1.2.4')
 }
